<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <Button
        android:id="@+id/button"
        style="@style/ButtonStyle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="295dp"
        android:text="@string/ButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/start_Chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="340dp"
        android:text="@string/start_Chat_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/ButtonStyle1"/>

    <Button
        android:id="@+id/test_Toolbar"
        style="@style/ButtonStyle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="250dp"
        android:text="@string/test_Toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/weather_Button"
        style="@style/ButtonStyle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="28dp"
        android:text="@string/weather_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinCity"
        android:layout_width="147dp"
        android:layout_height="61dp"
        android:layout_marginStart="23dp"
        android:layout_weight="1"
        android:dropDownWidth="wrap_content"
        android:dropDownVerticalOffset="40dp"
        android:entries="@array/CAN"
        android:popupBackground="#FFFFFF"
        android:prompt="@string/select_city"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/weather_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/test_Toolbar"
        app:layout_constraintTop_toBottomOf="@+id/test_Toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>